add links to foreign key and many to many models

--- a/demo_example/app/templates/app/index.html
+++ b/demo_example/app/templates/app/index.html
@@ -6,7 +6,10 @@
 <body>
 
 <a href="/app/persons/">Persons</a>
-<a href="/app/schedule/">Schedule</a>
+<br />
+<a href="/app/schedule/">Schedule (ForeignKey)</a>
+<br />
+<a href="/app/shopping/">Shopping List (ManyToMany)</a>
 
 </body>
 </html>
