--- a/demo_example/app/templates/app/persons.html
+++ b/demo_example/app/templates/app/persons.html
@@ -9,51 +9,53 @@
 <body>
 
 <h1>Django</h1>
-<table>
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for person in persons %}
-        <tr>
-            <td>{{ person.id }}</td>
-            <td>{{ person.first_name }}</td>
-            <td>{{ person.last_name }}</td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-<h1>Knockout</h1>
-<table>
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>First Name</th>
-            <th>Last Name</th>
-            <th>Remove</th>
-        </tr>
-    </thead>
-    <tbody data-bind="foreach: persons">
-        <tr>
-            <td><input data-bind="value: id" /></td>
-            <td><input data-bind='value: first_name, valueUpdate: "afterkeydown"' /></td>
-            <td><input data-bind="value: last_name" /></td>
-            <td><input data-bind="value: first_name" /></td>
-            <td><input data-bind="value: last_name" /></td>
-            <td><button data-bind='click: $root.removePerson'>Remove a Person</button></td>
-        </tr>
-    </tbody>
-</table>
-<p>Count: <span data-bind='text: persons().length'></span>
-<button data-bind='click: addPerson'>Add a Person</button>
-<button data-bind='click: sortPersonsAsc'>Sort Asc</button>
-<button data-bind='click: sortPersonsDesc'>Sort Desc</button>
+<div id="personviewmodel">
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for person in persons %}
+            <tr>
+                <td>{{ person.id }}</td>
+                <td>{{ person.first_name }}</td>
+                <td>{{ person.last_name }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <h1>Knockout</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Remove</th>
+            </tr>
+        </thead>
+        <tbody data-bind="foreach: _persons">
+            <tr>
+                <td><input data-bind="value: _id" /></td>
+                <td><input data-bind='value: _first_name, valueUpdate: "afterkeydown"' /></td>
+                <td><input data-bind="value: _last_name" /></td>
+                <td><input data-bind="value: _first_name" /></td>
+                <td><input data-bind="value: _last_name" /></td>
+                <td><button data-bind='click: $root.removePerson'>Remove a Person</button></td>
+            </tr>
+        </tbody>
+    </table>
+    Count: <span data-bind='text: _persons().length'></span>
+    <button data-bind='click: addPerson'>Add a Person</button>
+    <button data-bind='click: sortPersonsAsc'>Sort Asc</button>
+    <button data-bind='click: sortPersonsDesc'>Sort Desc</button>
+</div>
 <script>
     {{ persons|knockout }}
 </script>
