multiple models example

--- a/demo_example/app/templates/app/index.html
+++ b/demo_example/app/templates/app/index.html
@@ -10,6 +10,8 @@
 <a href="/app/schedule/">Schedule (ForeignKey)</a>
 <br />
 <a href="/app/shopping/">Shopping List (ManyToMany)</a>
+<br />
+<a href="/app/multiple_models/">Multiple Models</a>
 
 </body>
 </html>
