--- a/demo_example/app/templates/app/schedule.html
+++ b/demo_example/app/templates/app/schedule.html
@@ -45,20 +45,20 @@
                 <th>Remove</th>
             </tr>
         </thead>
-        <tbody data-bind="foreach: _tasks">
+        <tbody data-bind="foreach: tasks">
             <tr>
-                <td><input data-bind="value: _id" /></td>
-                <td><input data-bind='value: _task, valueUpdate: "afterkeydown"' /></td>
-                <td><input data-bind="value: _day._day" /></td>
-                <td><input data-bind="value: _reminder._reminder" /></td>
-                <td><input data-bind="value: _reminder._reminder_type.reminder_type" /></td>
-                <td><input data-bind="value: _task" /></td>
-                <td><input data-bind="value: _day._day" /></td>
+                <td><input data-bind="value: id" /></td>
+                <td><input data-bind='value: task, valueUpdate: "afterkeydown"' /></td>
+                <td><input data-bind="value: day.day" /></td>
+                <td><input data-bind="value: reminder.reminder" /></td>
+                <td><input data-bind="value: reminder.reminder_type.reminder_type" /></td>
+                <td><input data-bind="value: task" /></td>
+                <td><input data-bind="value: day.day" /></td>
                 <td><button data-bind='click: $root.removeTask'>Remove a Task</button></td>
             </tr>
         </tbody>
     </table>
-    Count: <span data-bind='text: _tasks().length'></span>
+    Count: <span data-bind='text: tasks().length'></span>
     <button data-bind='click: addTask'>Add a Task</button>
     <button data-bind='click: sortTasksAsc'>Sort Asc</button>
     <button data-bind='click: sortTasksDesc'>Sort Desc</button>
