add persons_form and persons_formset, add Objects to urls to be more descriptive, better spacing

--- a/demo_example/app/templates/app/index.html
+++ b/demo_example/app/templates/app/index.html
@@ -5,13 +5,27 @@
 <head></head>
 <body>
 
-<a href="/app/persons/">Persons</a>
+<div>
+    <a href="{% url 'persons' %}">Persons Objects</a>
+    {% if not person %}
+        Please create a person before using the UpdateView.
+    {% else  %}
+        <a href="{% url 'persons_form' person.pk %}">Persons Form</a>
+    {% endif %}
+    <a href="{% url 'persons_formset' %}">Persons Formset</a>
+</div>
 <br />
-<a href="/app/schedule/">Schedule (ForeignKey)</a>
+<div>
+    <a href="{% url 'schedule' %}">Schedule Objects (ForeignKey)</a>
+</div>
 <br />
-<a href="/app/shopping/">Shopping List (ManyToMany)</a>
+<div>
+    <a href="{% url 'shopping' %}">Shopping List Objects (ManyToMany)</a>
+</div>
 <br />
-<a href="/app/multiple_models/">Multiple Models</a>
+<div>
+    <a href="{% url 'multiple_models' %}">Multiple Models Objects</a>
+</div>
 
 </body>
 </html>
