add item id and remove headers

--- a/demo_example/app/templates/app/multiple_models.html
+++ b/demo_example/app/templates/app/multiple_models.html
@@ -173,8 +173,10 @@
                     <table>
                         <thead>
                             <tr>
+                                <th>Item ID</th>
                                 <th>Item Name</th>
                                 <th>Description</th>
+                                <th>Remove</th>
                             </tr>
                         </thead>
                         <tbody data-bind="foreach: items">
