--- a/demo_example/app/templates/app/persons.html
+++ b/demo_example/app/templates/app/persons.html
@@ -3,11 +3,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js'></script>
+    <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-debug.js'></script>
+    <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/knockout-pre-rendered/0.5.0/knockout-pre-rendered.min.js'></script>
 </head>
 <body>
 
 <h1>Django</h1>
+
 <table>
     <thead>
         <tr>
@@ -26,7 +28,10 @@
         {% endfor %}
     </tbody>
 </table>
+
 <h1>Knockout</h1>
+
+<h2>Regular</h2>
 <div id="personviewmodel">
     <table>
         <thead>
@@ -55,8 +60,44 @@
     <button data-bind='click: sortPersonsAsc'>Sort Asc</button>
     <button data-bind='click: sortPersonsDesc'>Sort Desc</button>
 </div>
+
+<h2>Pre-rendered</h2>
+<div id="prerendered">
+    <table>
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>First Name</th>
+                <th>Last Name</th>
+                <th>Remove</th>
+            </tr>
+        </thead>
+        <tbody data-bind="foreachInit: { data: persons, createElement: createPerson }">
+            <tr data-template>
+                <td><input data-bind="value: id"></td>
+                <td><input data-bind="value: first_name"></td>
+                <td><input data-bind="value: last_name"></td>
+                <td><button data-bind='click: $root.removePerson'>Remove a Person</button></td>
+            </tr>
+            {% for person in persons %}
+            <tr data-init>
+                <td><input data-bind="init, value: id" value="{{ person.id }}"></td>
+                <td><input data-bind="init, value: first_name" value="{{ person.first_name }}"></td>
+                <td><input data-bind="init, value: last_name" value="{{ person.last_name }}"></td>
+                <td><button data-bind='click: $root.removePerson'>Remove a Person</button></td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    Count: <span data-bind='text: persons().length'></span>
+    <button data-bind='click: addPerson'>Add a Person</button>
+    <button data-bind='click: sortPersonsAsc'>Sort Asc</button>
+    <button data-bind='click: sortPersonsDesc'>Sort Desc</button>
+</div>
+
 <script>
-    {{ persons|knockout }}
+    {{ persons|knockout }} {# personviewmodel #}
+    {{ persons|knockout_bindings:"prerendered,ignore_data"}}
 </script>
 
 </body>
