persons_form.html update knockout_bindings from filter to simple_tag

--- a/demo_example/app/templates/app/persons.html
+++ b/demo_example/app/templates/app/persons.html
@@ -97,7 +97,7 @@
 
 <script>
     {{ persons|knockout }} {# personviewmodel #}
-    {{ persons|knockout_bindings:"prerendered,ignore_data"}}
+    {% knockout_bindings persons element_id="prerendered" ignore_data=False %}
 </script>
 
 </body>
