--- a/demo_example/app/templates/app/persons_form.html
+++ b/demo_example/app/templates/app/persons_form.html
@@ -58,7 +58,7 @@
 
 <script>
     {{ PersonClass|knockout:"ignore_queryset" }}
-    {{ PersonClass|knockout_bindings:"automatic"}}
+    {% knockout_bindings PersonClass element_id="automatic" %}
 </script>
 
 </body>
