--- a/demo_example/app/templates/app/persons.html
+++ b/demo_example/app/templates/app/persons.html
@@ -6,7 +6,7 @@
 
     <h1>Django</h1>
 
-    <p>Static, requires reloading page for changes, has Django template tag access</p>
+    <p>Static, requires reloading page for changes</p>
 
     <table>
         <thead>
@@ -74,6 +74,7 @@
                     <th>First Name</th>
                     <th>Last Name</th>
                     <th>First Name (Duplicate)</th>
+                    <th>Last Name (Duplicate)</th>
                     <th>Remove</th>
                 </tr>
             </thead>
@@ -90,6 +91,7 @@
                     <td><input data-bind="init, value: first_name" value="{{ person.first_name }}"></td>
                     <td><input data-bind="init, value: last_name" value="{{ person.last_name }}"></td>
                     <td><input data-bind="value: first_name" /></td>
+                    <td><input data-bind="value: last_name" /></td>
                     <td><button data-bind='click: $root.removePerson'>Remove a Person</button></td>
                 </tr>
                 {% endfor %}
@@ -107,9 +109,8 @@
             'id': null, 'first_name': null, 'last_name': null,
         };
 
+        {# regular ko, data needs to be accessible by ajax or rendered into a js var #}
         {% knockout persons %} {# personviewmodel #}
-        {% knockout_bindings persons element_id="prerendered" %}
-
         {# can be utilized with django rest framework to get all persons via ajax #}
         var persons = [
             {% for person in persons %}
@@ -125,6 +126,9 @@
         );
         persons_observable_array = ko.mapping.fromJS(persons);
         personviewmodel.persons(persons_observable_array());
+
+        {# prerendered via django templates ko #}
+        {% knockout_bindings persons element_id="prerendered" %}
     </script>
 
 {% endblock content %}
