--- a/demo_example/app/templates/app/persons_form.html
+++ b/demo_example/app/templates/app/persons_form.html
@@ -3,57 +3,76 @@
 {% load knockout_tags %}
 {% load add_css %}
 
+{% block title %}Persons Form - {% endblock %}
+
 {% block content %}
 
     <h1>Django</h1>
+
+    <p>Static</p>
 
     <div>
         <form method="POST">
             {% csrf_token %}
             <div>
-                {{ form }}
+                {{ form.as_p }}
             </div>
             <button type="submit">Submit</button>
         </form>
     </div>
 
-    <h1>Knockout</h1>
+    <h1>Django Knockout</h1>
 
     <h2>Manual</h2>
+
+    <p>Dynamic, this method is for fine grain manipulation of form template (can also use KnockoutModelForm and skip using the data_bind templatetag)</p>
+
     <div id="personviewmodel">
         <form method="POST" data-bind="foreachInit: { data: persons, createElement: createPerson }">
             {% csrf_token %}
             <div data-template></div>
             <div data-init>
                 {% for field in form %}
-                    {{ field.errors }}
-                    {% if not field.is_hidden %}
-                        {{ field.label_tag }}
-                    {% endif %}
-                    {% data_bind field as data_bind %}
-                    {{ field|add_css:data_bind }}
+                    <p>
+                        {{ field.errors }}
+                        {% if not field.is_hidden %}
+                            {{ field.label_tag }}
+                        {% endif %}
+                        {% data_bind field as data_bind %}
+                        {{ field|add_css:data_bind }}
+                    </p>
                 {% endfor %}
-                First Name: <input data-bind="value: first_name">
+                First Name (Duplicate): <input data-bind="value: first_name">
             </div>
             <button type="submit">Submit</button>
         </form>
     </div>
 
     <h2>Automatic</h2>
+
+    <p>Dynamic, default form rendering with KnockoutModelForm</p>
+
     <div id="automatic">
         <form method="POST" data-bind="foreachInit: { data: persons, createElement: createPerson }">
             {% csrf_token %}
             <div data-template></div>
             <div data-init>
-                {{ form2.as_table }}
-                First Name: <input data-bind="value: first_name">
+                {{ knockout_form.as_p }}
+                First Name (Duplicate): <input data-bind="value: first_name">
             </div>
             <button type="submit">Submit</button>
         </form>
     </div>
 
-    <script type="text/javascript"
-        {{ PersonClass|knockout:"ignore_queryset" }}
+    <script type="text/javascript">
+        {# can be utilized with django rest framework OPTIONS method via knockout/metadata.py #}
+        var person_fields = {
+            first_name: null,
+            last_name: null,
+        };
+
+        {% knockout PersonClass %}
+
         {% knockout_bindings PersonClass element_id="automatic" %}
     </script>
 
