--- a/demo_example/app/templates/app/persons_formset.html
+++ b/demo_example/app/templates/app/persons_formset.html
@@ -3,6 +3,8 @@
 {% load knockout_tags %}
 {% load add_css %}
 
+{% block title %}Persons FormSet - {% endblock %}
+
 {% block content %}
 
     <h1>Knockout</h1>
