fix schedule objects (foreignkey)
- formatting
- use 1 Duplicate, gets point across
- update schedule objects (foreignkey) to work with updated django-knockout
- explain <model>_fields

--- a/demo_example/app/templates/app/persons.html
+++ b/demo_example/app/templates/app/persons.html
@@ -108,12 +108,13 @@
 
     <script type="text/javascript">
         {# can be utilized with django rest framework OPTIONS method via knockout/metadata.py #}
+        {# required to create new persons #}
         var person_fields = {
             'id': null, 'first_name': null, 'last_name': null,
         };
 
         {# regular ko, data needs to be accessible by ajax or rendered into a js var #}
-        {% knockout persons %} {# personviewmodel #}
+        {% knockout persons %}
         {# can be utilized with django rest framework to get all persons via ajax #}
         var persons = [
             {% for person in persons %}
