--- a/demo_example/app/templates/app/persons_formset.html
+++ b/demo_example/app/templates/app/persons_formset.html
@@ -62,6 +62,7 @@
         var empty_form_prefix = "{{ formset.empty_form.prefix }}";
 
         {# can be utilized with django rest framework OPTIONS method via knockout/metadata.py #}
+        {# required to create new persons #}
         var person_fields = {
             id: null,
             first_name: null,
