--- a/demo_example/app/templates/app/schedule.html
+++ b/demo_example/app/templates/app/schedule.html
@@ -7,10 +7,13 @@
 {% block content %}
 
     <h1>Django</h1>
+
+    <p>Static</p>
+
     <table>
         <thead>
             <tr>
-                <th>Task ID</th>
+                <th>ID</th>
                 <th>Task</th>
                 <th>Day</th>
                 <th>Reminder</th>
@@ -29,19 +32,22 @@
             {% endfor %}
         </tbody>
     </table>
-    <h1>Knockout</h1>
+
+    <h1>Django Knockout</h1>
+
+    <p>Dynamic, supports spanning ForeignKeys</p>
+
     <div id="taskviewmodel">
         <table>
             <thead>
                 <tr>
-                    <th>Task ID</th>
+                    <th>ID</th>
                     <th>Task</th>
                     <th>Day</th>
                     <th>Reminder</th>
                     <th>Reminder Type</th>
-                    <th>Task</th>
-                    <th>Day</th>
-                    <th>Remove</th>
+                    <th>Task (Duplicate)</th>
+                    <th></th>
                 </tr>
             </thead>
             <tbody data-bind="foreach: tasks">
@@ -52,19 +58,46 @@
                     <td><input data-bind="value: reminder.reminder" /></td>
                     <td><input data-bind="value: reminder.reminder_type.reminder_type" /></td>
                     <td><input data-bind="value: task" /></td>
-                    <td><input data-bind="value: day.day" /></td>
                     <td><button data-bind='click: $root.removeTask'>Remove a Task</button></td>
                 </tr>
             </tbody>
         </table>
-        Count: <span data-bind='text: tasks().length'></span>
-        <button data-bind='click: addTask'>Add a Task</button>
-        <button data-bind='click: sortTasksAsc'>Sort Asc</button>
-        <button data-bind='click: sortTasksDesc'>Sort Desc</button>
+        <p>
+            Count: <span data-bind='text: tasks().length'></span>
+            <button data-bind='click: addTask'>Add a Task</button>
+            <button data-bind='click: sortTasksAsc'>Sort Asc</button>
+            <button data-bind='click: sortTasksDesc'>Sort Desc</button>
+        </p>
     </div>
 
     <script type="text/javascript">
-        {{ schedule|knockout }}
+        {# regular ko, data needs to be accessible by ajax or rendered into a js var #}
+        {% knockout schedule %}
+
+        {# can be utilized with django rest framework to get all persons via ajax #}
+        var tasks = [
+            {% for task in schedule %}
+                {
+                    id: '{{ task.id }}',
+                    task: '{{ task.task }}',
+                    day: {
+                        day: '{{ task.day.day }}',
+                    },
+                    reminder: {
+                        reminder: '{{ task.reminder.reminder }}',
+                        reminder_type: {
+                            reminder_type:
+                                '{{ task.reminder.reminder_type.reminder_type }}',
+                        },
+                    },
+                },
+            {% endfor %}
+        ];
+        var taskviewmodel = ko.dataFor(
+            document.getElementById('taskviewmodel')
+        );
+        tasks_observable_array = ko.mapping.fromJS(tasks);
+        taskviewmodel.tasks(tasks_observable_array());
     </script>
 
 {% endblock content %}
