--- a/demo_example/app/templates/app/shopping.html
+++ b/demo_example/app/templates/app/shopping.html
@@ -1,99 +1,98 @@
+{% extends 'app/base.html' %}
+
 {% load knockout_tags %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <script type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/knockout/3.3.0/knockout-min.js'></script>
-</head>
-<body>
+{% block title %}Shopping List Objects (ManyToMany) - {% endblock %}
 
-<h1>Django</h1>
-<table>
-    <thead>
-        <tr>
-            <th>Shopping List ID</th>
-            <th>Shopping List Name</th>
-            <th>Items</th>
-        </tr>
-    </thead>
-    <tbody>
-        {% for shopping_list in shopping_lists %}
-        <tr>
-            <td>{{ shopping_list.id }}</td>
-            <td>{{ shopping_list.name }}</td>
-            <td>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Item Name</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for item in shopping_list.items.all %}
-                        <tr>
-                            <td>{{ item.name }}</td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </td>
-        </tr>
-        {% endfor %}
-    </tbody>
-</table>
-<h1>Knockout</h1>
-<div id="shoppingviewmodel">
+{% block content %}
+
+    <h1>Django</h1>
     <table>
         <thead>
             <tr>
                 <th>Shopping List ID</th>
-                <th>Name</th>
+                <th>Shopping List Name</th>
                 <th>Items</th>
-                <th>Name</th>
-                <th>Remove</th>
             </tr>
         </thead>
-        <tbody data-bind="foreach: shoppings">
+        <tbody>
+            {% for shopping_list in shopping_lists %}
             <tr>
-                <td><input data-bind="value: id" /></td>
-                <td><input data-bind='value: name, valueUpdate: "afterkeydown"' /></td>
+                <td>{{ shopping_list.id }}</td>
+                <td>{{ shopping_list.name }}</td>
                 <td>
                     <table>
                         <thead>
                             <tr>
-                                <th>Item ID</th>
                                 <th>Item Name</th>
-                                <th>Description</th>
-                                <th>Remove</th>
                             </tr>
                         </thead>
-                        <tbody data-bind="foreach: items">
+                        <tbody>
+                            {% for item in shopping_list.items.all %}
                             <tr>
-                                <td><input data-bind="value: id" /></td>
-                                <td><input data-bind="value: name" /></td>
-                                <td><input data-bind="value: description.description" /></td>
-                                <td><button data-bind='click: $parent.removeItem'>Remove an Item</button></td>
+                                <td>{{ item.name }}</td>
                             </tr>
+                            {% endfor %}
                         </tbody>
                     </table>
-                    Count: <span data-bind='text: items().length'></span>
-                    <button data-bind='click: addItem'>Add an Item</button>
-                    <button data-bind='click: sortItemsAsc'>Sort Asc</button>
-                    <button data-bind='click: sortItemsDesc'>Sort Desc</button>
                 </td>
-                <td><input data-bind="value: name" /></td>
-                <td><button data-bind='click: $root.removeShopping'>Remove a Shopping List</button></td>
             </tr>
+            {% endfor %}
         </tbody>
     </table>
-    Count: <span data-bind='text: shoppings().length'></span>
-    <button data-bind='click: addShopping'>Add a Shopping List</button>
-    <button data-bind='click: sortShoppingsAsc'>Sort Asc</button>
-    <button data-bind='click: sortShoppingsDesc'>Sort Desc</button>
-</div>
-<script>
-    {{ shopping_lists|knockout }}
-</script>
+    <h1>Knockout</h1>
+    <div id="shoppingviewmodel">
+        <table>
+            <thead>
+                <tr>
+                    <th>Shopping List ID</th>
+                    <th>Name</th>
+                    <th>Items</th>
+                    <th>Name</th>
+                    <th>Remove</th>
+                </tr>
+            </thead>
+            <tbody data-bind="foreach: shoppings">
+                <tr>
+                    <td><input data-bind="value: id" /></td>
+                    <td><input data-bind='value: name, valueUpdate: "afterkeydown"' /></td>
+                    <td>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Item ID</th>
+                                    <th>Item Name</th>
+                                    <th>Description</th>
+                                    <th>Remove</th>
+                                </tr>
+                            </thead>
+                            <tbody data-bind="foreach: items">
+                                <tr>
+                                    <td><input data-bind="value: id" /></td>
+                                    <td><input data-bind="value: name" /></td>
+                                    <td><input data-bind="value: description.description" /></td>
+                                    <td><button data-bind='click: $parent.removeItem'>Remove an Item</button></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        Count: <span data-bind='text: items().length'></span>
+                        <button data-bind='click: addItem'>Add an Item</button>
+                        <button data-bind='click: sortItemsAsc'>Sort Asc</button>
+                        <button data-bind='click: sortItemsDesc'>Sort Desc</button>
+                    </td>
+                    <td><input data-bind="value: name" /></td>
+                    <td><button data-bind='click: $root.removeShopping'>Remove a Shopping List</button></td>
+                </tr>
+            </tbody>
+        </table>
+        Count: <span data-bind='text: shoppings().length'></span>
+        <button data-bind='click: addShopping'>Add a Shopping List</button>
+        <button data-bind='click: sortShoppingsAsc'>Sort Asc</button>
+        <button data-bind='click: sortShoppingsDesc'>Sort Desc</button>
+    </div>
 
-</body>
-</html>
+    <script type="text/javascript">
+        {{ shopping_lists|knockout }}
+    </script>
+
+{% endblock content %}
